# django.nvim

./: .cspell.json  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
lua/django/: async.lua  config.lua  init.lua  utils.lua  watcher.lua
lua/django/annotations/: views.lua
lua/django/completions/: blink.lua  init.lua
lua/django/completions/core/: completion_builder.lua  context_parser.lua  model_data.lua
lua/django/fetcher/: cache.lua  executor.lua  init.lua  state.lua
lua/django/pickers/: init.lua  models.lua  views.lua
lua/django/shell/: init.lua
plugin/: django.lua
project/: settings.py  test_completions.py  urls.py
project/blog/: apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
project/shop/: serializers.py  urls.py  viewsets.py
project/shop/models/: __init__.py  category.py  order.py  product.py
scripts/: django_utils.py  get_completion_data.py  get_models.py  get_views.py
