[project]
name = "project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.2.8",
  "django-types>=0.22.0",
  "djangorestframework>=3.16.1",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

venvPath = "."
venv = ".venv"

defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
